MTM.AzureVM.ArmTemplate/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "azurecostcentre": {
      "type": "string"
    },
    "azuresecondarycostcentre": {
      "type": "string"
    },
    "storageType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_ZRS",
        "Standard_GRS",
        "Standard_RAGRS",
        "Premium_LRS"
      ]
    },
    "vmName": {
      "type": "string",
      "minLength": 1
    },
    "vmAdminUsername": {
      "type": "string",
      "minLength": 1
    },
    "vmAdminPassword": {
      "type": "securestring"
    },
    "vmWindowsOSVersion": {
      "type": "string",
      "defaultValue": "2016-Datacenter",
      "allowedValues": [
        "2008-R2-SP1",
        "2012-Datacenter",
        "2012-R2-Datacenter",
        "Windows-Server-Technical-Preview",
        "2016-Datacenter"
      ]
    },
    "vmSize": {
      "type": "string",
      "minLength": 1
    },
    "sqlAdminUsername": {
      "type": "string",
      "minLength": 1
    },
    "sqlAdminPassword": {
      "type": "securestring"
    }
  },
  "variables": {
    "Vnet1Prefix": "10.0.0.0/16",
    "Vnet1Subnet1Name": "Subnet-1",
    "Vnet1Subnet1Prefix": "10.0.0.0/24",
    "Vnet1Subnet2Name": "Subnet-2",
    "Vnet1Subnet2Prefix": "10.0.1.0/24",
    "VmImage": "MicrosoftWindowsServer",
    "VmImageOffer": "WindowsServer",
    "VnetName": "[concat(resourceGroup().name, 'Vnet')]",
    "VnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('VnetName'))]",
    "VnetSubnetRef": "[concat(variables('VnetId'), '/subnets/', variables('Vnet1Subnet1Name'))]",
    "storageAccountName": "[concat(toLower(resourceGroup().name), 'storage')]",
    "NicName": "[concat(parameters('vmName'), 'NetworkInterface')]",
    "sqlservername": "[concat(toLower(resourceGroup().name),'-', 'sqlserver')]",
    "frontEndNSGName": "[concat(toLower(resourceGroup().name),'-', 'NSG')]",
    "vmOsDiskName": "[concat(parameters('vmName'),'-', 'OsDisk')]",
    "vmPublicIpName": "[concat(parameters('vmName'),'-', 'PIP')]",
    "vmDomainNameLabel": "[toLower(parameters('vmName'))]",
    "hostDNSNameScriptArgument": "[concat('*.',resourceGroup().location,'.cloudapp.azure.com')]"
  },
  "resources": [
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('frontEndNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG - Front End",
        "costcentre": "[parameters('azurecostcentre')]",
        "secondarycostcentre": "[parameters('azuresecondarycostcentre')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "MTMOfficeRDP",
            "properties": {
              "description": "MTM Office RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "195.8.193.195",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "MTMOfficeWebHttp",
            "properties": {
              "description": "MTM Office Web Http",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "195.8.193.195",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "MTMOfficeWebHttps",
            "properties": {
              "description": "MTM Office Web Https",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "195.8.193.195",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "MTMOffice-NordVPN1-Http",
            "properties": {
              "description": "MTMOffice-NordVPN1-Http",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "185.144.100.131",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "MTMOffice-NordVPN1-Https",
            "properties": {
              "description": "MTMOffice-NordVPN1-Https",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "185.144.100.131",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "MTMOffice-NordVPN2-Http",
            "properties": {
              "description": "MTMOffice-NordVPN1-Http",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "81.19.217.3",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 150,
              "direction": "Inbound"
            }
          },
          {
            "name": "MTMOffice-NordVPN2-Https",
            "properties": {
              "description": "MTMOffice-NordVPN1-Https",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "81.19.217.3",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 160,
              "direction": "Inbound"
            }
          },
          {
            "name": "VSO-Custom-WinRM-Https-Port",
            "properties": {
              "description": "VSO-Custom-WinRM-Https-Port",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5986",
              "sourceAddressPrefix": "52.151.83.164",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 170,
              "direction": "Inbound"
            }
          }
        ]
        }
    },
    {
      "name": "[variables('VnetName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-03-30",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontEndNSGName'))]"
      ],
      "tags": {
        "displayName": "Vnet",
        "costcentre": "[parameters('azurecostcentre')]",
        "secondarycostcentre": "[parameters('azuresecondarycostcentre')]"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('Vnet1Prefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('Vnet1Subnet1Name')]",
            "properties": {
              "addressPrefix": "[variables('Vnet1Subnet1Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontEndNSGName'))]"
              }
            }
          },
          {
            "name": "[variables('Vnet1Subnet2Name')]",
            "properties": {
              "addressPrefix": "[variables('Vnet1Subnet2Prefix')]"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('storageAccountName')]",
      "type": "Microsoft.Storage/storageAccounts",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-01-01",
      "sku": {
        "name": "[parameters('storageType')]"
      },
      "dependsOn": [],
      "tags": {
        "displayName": "Storage",
        "costcentre": "[parameters('azurecostcentre')]",
        "secondarycostcentre": "[parameters('azuresecondarycostcentre')]"
      },
      "kind": "Storage"
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('vmPublicIpName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[variables('vmDomainNameLabel')]"
        }
      },
      "tags": {
        "displayName": "PublicIPAddress - Web"
      }
    },
    {
      "name": "[variables('NicName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-03-30",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('VnetName'))]"
      ],
      "tags": {
        "displayName": "NetworkInterface",
        "costcentre": "[parameters('azurecostcentre')]",
        "secondarycostcentre": "[parameters('azuresecondarycostcentre')]"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('vmPublicIpName'))]"
              },
              "subnet": {
                "id": "[variables('VnetSubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[parameters('vmName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-06-15",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('NicName'))]"
      ],
      "tags": {
        "displayName": "VirtualMachine",
        "costcentre": "[parameters('azurecostcentre')]",
        "secondarycostcentre": "[parameters('azuresecondarycostcentre')]"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('vmName')]",
          "adminUsername": "[parameters('vmAdminUsername')]",
          "adminPassword": "[parameters('vmAdminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('VmImage')]",
            "offer": "[variables('VmImageOffer')]",
            "sku": "[parameters('vmWindowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "[variables('vmOsDiskName')]",
            "vhd": {
              "uri": "[concat(reference(resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName')), '2016-01-01').primaryEndpoints.blob, variables('storageAccountName'), '/', variables('vmOsDiskName'), '.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('NicName'))]"
            }
          ]
        }
      },
      "resources": [
        {
          "type": "Microsoft.Compute/virtualMachines/extensions",
          "name": "[concat(parameters('vmName'),'/WinRMCustomScriptExtension')]",
          "apiVersion": "2015-06-15",
          "location": "[resourceGroup().location]",
          "dependsOn": [
            "[concat('Microsoft.Compute/virtualMachines/', parameters('vmName'))]"
          ],
          "properties": {
            "publisher": "Microsoft.Compute",
            "type": "CustomScriptExtension",
            "typeHandlerVersion": "1.4",
            "autoUpgradeMinorVersion": true,
            "settings": {
              "fileUris": [
                "https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/201-vm-winrm-windows/ConfigureWinRM.ps1",
                "https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/201-vm-winrm-windows/makecert.exe"
              ],
              "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -file ConfigureWinRM.ps1 ',variables('hostDNSNameScriptArgument'))]"
            }
          }
        }
      ]
    },
    {
      "name": "[variables('sqlServerName')]",
      "type": "Microsoft.Sql/servers",
      "location": "[resourceGroup().location]",
      "apiVersion": "2014-04-01-preview",
      "dependsOn": [],
      "tags": {
        "displayName": "SqlServer",
        "costcentre": "[parameters('azurecostcentre')]",
        "secondarycostcentre": "[parameters('azuresecondarycostcentre')]"
      },
      "properties": {
        "administratorLogin": "[parameters('sqlAdminUsername')]",
        "administratorLoginPassword": "[parameters('sqlAdminPassword')]"
      },
      "resources": [
        {
          "name": "AllowAllWindowsAzureIps",
          "type": "firewallrules",
          "location": "[resourceGroup().location]",
          "apiVersion": "2014-04-01-preview",
          "dependsOn": [
            "[resourceId('Microsoft.Sql/servers', variables('sqlServerName'))]"
          ],
          "properties": {
            "startIpAddress": "0.0.0.0",
            "endIpAddress": "195.8.193.195"
          }
        }
      ]
    }
  ]
}
